# kstats

./: .gitignore  README.md  kstats.toml  pyproject.toml  reading_statistics_analysis.md
backend/app/: cli.py  config.py  importer.py  kobo_events.py  main.py  reading_duration.py  repository.py  source_processing.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_kobo_events.py  test_reading_duration.py
docs/: kobo-source-filtering.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  cursor.test.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: app-shell.tsx  book-cover.tsx  book-detail-dialog.tsx  formatted-text.tsx  library-page.tsx  overview-page.tsx  status-badge.tsx
frontend/src/components/ui/: table.tsx
frontend/src/lib/: api.test.ts  api.ts  format.ts  reading-duration.test.ts  reading-duration.ts
frontend/src/test/: setup.ts
