[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kobo-stats"
version = "0.1.0"
description = "Local-first reading statistics dashboard for native Kobo readers"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "tzdata>=2026.3",
  "uvicorn[standard]>=0.34.0",
]

[project.scripts]
dev = "backend.app.cli:dev"
prod = "backend.app.cli:prod"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["backend.tests*"]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
